<resources>
    <string name="app_name">Olsera Test</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="company_location">Company &amp; Locations</string>
    <string name="add_location">Add Location</string>
    <string name="edit_location">Edit Location</string>
    <string name="name_empty_alert">Name cannot empty</string>

    <string name="fab_desc">FAB Add Location</string>
    <string name="company_desc">Online Booking Enabled</string>
    <string name="all_status">All Status</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>

    <string name="status">Status</string>
    <string name="name">Name</string>
    <string name="location_address">Location Address</string>
    <string name="map">Map</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>